# sanjai-insight

./: .env.example  .env.railway.template  .gitignore  AUTOMATION_GUIDE.md  CLAUDE.md  COMPLIANCE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEVIATION_LOG.md  DISASTER_RECOVERY.md  Dockerfile  FINAL_REPORT.md  HANDOFF.md  HANDOFF_OPERATIONAL_v2.md  LESSONS_LEARNED.md  PUSH_INSTRUCTIONS.md  RAILWAY_SETUP.md  README.md  TEST_FIX_COMPLETE.md  pyproject.toml  railway.toml  railway_autoscaling.toml  requirements.txt  schema.sql  schema_alerts.sql  schema_audit.sql  schema_indexes.sql  schema_v2_operational.sql
benchmarks/: .gitkeep
config/: competitors.yaml  grafana_dashboard.json  keywords.yaml  models.yaml  schedule.yaml  templates.yaml  thresholds.yaml
docs/: API_REFERENCE.md  DEPENDENCY_VERIFICATION.md  DEPLOYMENT_HEALTH_CHECK.md  ENHANCEMENT_COMPLETE.md  ENHANCEMENT_SUMMARY.md  HEALTH_CHECK_REPORT.md  MONITORING_SESSION.md  OPERATIONS_MANUAL.md  QUICK_REFERENCE.md  RAILWAY_DEPLOYMENT_STATUS.md  RAILWAY_MONITORING_SUMMARY.md  TROUBLESHOOTING.md
reports/: .gitkeep
scripts/: backfill.py  backup.sh  backup_verify.sh  benchmark.py  deploy.sh  grafana_setup.sh  health_check.sh  health_monitor.py  init_db.py  insight_health.py  prototype_50_full.py  railway_deploy.sh  railway_deploy_full.sh  restore.sh  run_pipeline.py  setup_cron.sh
src/: __init__.py  app.py  db.py  models.py  server.py
tests/: __init__.py  conftest.py  load_test.py  test_approval.py  test_collectors.py  test_config_validation.py  test_content_v2.py  test_error_handling.py  (+12 more)
(+107 files in other folders)
